--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,14 @@
 Package: shinyplanr
 Title: Spatial Planning in Shiny
 Version: 0.0.1
-Authors@R: person('Jason', 'Everett', email = 'jaseeverett@gmail.com', role = c('cre', 'aut'))
+Authors@R: person('Jason', 'Everett', email = 'jaseeverett@gmail.com', role = c('cre', 'aut')),
+    person(
+      given = "Sandra",
+      family = "Neubert",
+      role = c("aut"),
+      email = "sandra.neubert97@gmail.com",
+      comment = c(ORCID = "0000-0002-3112-4116")
+      ))
 Description: A generic app package to facilitate spatial planning in Shiny.
 License: MIT + file LICENSE
 Imports: 
