--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 .DS_Store
+data-raw/Default/climate_data/*
+data-raw/FSM/climate_data/*
+data-raw/Kosrae/climate_data/*
+data-raw/Kosrae/KosraeData/*
